--- a/config/west.yml
+++ b/config/west.yml
@@ -4,13 +4,20 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: sekigon-gonnoc
       url-base: https://github.com/sekigon-gonnoc
+    - name: badjeff
+      url-base: https://github.com/badjeff
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    # ▼ 既存のPAW3222ドライバー (これがないとボールが反応しません)
     - name: zmk-driver-paw3222
       remote: sekigon-gonnoc
+      revision: main
+    # ▼ 今回追加するスクロール拡張機能 (これがないとMapperが動きません)
+    - name: zmk-input-behavior-listener
+      remote: badjeff
       revision: main
   self:
     path: config
